# PythonTips

./: Python-MediumArticles.md  Python-WhattoLearn.md
00-PythonInstallation/: Readme.md
02-tryexcept/: Readme.md
03-GlobalvsLocalVariables/: Readme.md
05-ImproveCodeEfficiency/: Readme.md  constants.py
06-Organize Code/: README_Python_Namespace.md  Readme.md
07-__all__/: main.py
09-pythontypechecking/: Readme_Typechecking.md
1-Pythonmistakes/: Readme.md  main.py  pygame.py
11-SOLID/: Readme.md
15-TypeHints/: Readme.md  luhn.py  type_driven_development.py
17-SoftwareArchitecture/: Readme.md
2-tryexcept/: main.py
22-TechnicalDebt/: Readme.md
23-GooglePythonStyleGuide/: Readme.md
25-StrcuturePythonProjects/: Readme.md  Readme_PythonApplicationLayouts.md
3-GlobalvsLocalVariables/: main.py
30 - Python Logging/: Readme.md  customlogs.py  tutorial.py
31-PythonDataEngineering/: Readme.md
32-PythonRequests/: Readme.md  Readme_API_Auth.md
33-EnvironmentVariablesPython/: Readme.md
34-PythonPackageDistribution/: Readme.md  Readme_pypi_publish.md
35-SetupTools/: README.md
36-PythonDocumentation/: README.md  Readme_DocumentingPythonCode.md  Readme_Googlestyle.md
37-PythonPackages/: README_Namespace.md  README_modules_packages.md
38-PythonDescriptors/: Readme_Descriptors.md  Readme_Property.md  Readme_python_property().md
4-PythonSlow/: Readme.md
51-uv/my_project/: hello.py  pyproject.toml
51-uv/my_project/another_project/: hello.py  pyproject.toml
51-uv/my_project/another_project/yet-another-project/: hello.py  pyproject.toml
(+253 files in other folders)
