[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.36",
]

[tool.uv.workspace]
members = ["another_project"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"